# BC95XLT_prog

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake-multi-platform.yml
cmake/Modules/: FindAsio.cmake
src/: CMakeLists.txt  Channel.cpp  Channel.h  Radio.cpp  Radio.h  main.cpp
test/: BitoptTest.cpp  CMakeLists.txt  ChannelTest.cpp  RadioTest.cpp
