cmake_minimum_required(VERSION 3.20)
include_directories( ${PROJECT_SOURCE_DIR}/src)
add_compile_definitions(USE_CATCH2_VERSION=${Catch2_VERSION_MAJOR})

add_executable(BitoptTest BitoptTest.cpp)
add_test(BitoptTest BitoptTest)
if(${Catch2_VERSION_MAJOR} STREQUAL "2")
    target_link_libraries(BitoptTest bc95xlt Catch2::Catch2)
else()
    target_link_libraries(BitoptTest bc95xlt Catch2::CatchWithMain)
endif()

add_executable(ChannelTest ChannelTest.cpp)
add_test(ChannelTest ChannelTest)
if(${Catch2_VERSION_MAJOR} STREQUAL "2")
    target_link_libraries(ChannelTest bc95xlt Catch2::Catch2)
else()
    target_link_libraries(ChannelTest bc95xlt Catch2::CatchWithMain)
endif()

add_test(RadioTest RadioTest)
add_executable(RadioTest RadioTest.cpp)
if(${Catch2_VERSION_MAJOR} STREQUAL "2")
    target_link_libraries(RadioTest bc95xlt Catch2::Catch2)
else()
    target_link_libraries(RadioTest bc95xlt Catch2::CatchWithMain)
endif()
